Added: Support for bigger file upload

--- a/webserv.conf
+++ b/webserv.conf
@@ -1,10 +1,10 @@
 server:
-	listen 127.0.0.1:8020;
+	listen 127.0.0.1:8021;
 
 	server_name teste.com;
 	root	Website;
 	#error_page 404 /workspaces/WebServer/Website/error_pages/500.html;
-	client_max_body_size 10000;
+	client_max_body_size 10M;
 	cgi_file_extension .py;
 
 	location / :
