Added: More precise error codes for CGI failures

--- a/webserv.conf
+++ b/webserv.conf
@@ -23,14 +23,14 @@ server:
 		root Website;
 		upload_dir uploaded/;
 
-server:
-	listen localhost:8091;
+# server:
+# 	listen localhost:8091;
 
-	server_name example.com;
+# 	server_name example.com;
 
-	root	Website;
+# 	root	Website;
 
-	location / :
-		return 301 /redirect/redirect.html;
-		allow GET POST;
-		index login.html;
+# 	location / :
+# 		return 301 /redirect/redirect.html;
+# 		allow GET POST;
+# 		index login.html;
