Added: Perl Cgi

--- a/webserv.conf
+++ b/webserv.conf
@@ -1,11 +1,11 @@
 server:
-	listen 127.0.0.1:8020;
+	listen 127.0.0.1:8001;
 
 	server_name teste.com;
 	root	Website;
-	#error_page 404 /workspaces/WebServer/Website/error_pages/500.html;
-	client_max_body_size 500M;
-	cgi_file_extension .py;
+	# error_page 404 Website/error_pages/500.html;
+	client_max_body_size 1M;
+	cgi_file_extension .cgi;
 
 	location / :
 		allow GET POST;
